// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationNavbar /> render() should render automation navbar for admin with automation add-on 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-3"
        >
          <div
            class="section d-flex align-items-center flex-grow"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper d-flex align-items-center flex-grow"
              title="My shop"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="Shopify logo"
                  role="presentation"
                  src="test-file-stub"
                />
              </div>
              <span
                class="name"
              >
                My shop
              </span>
            </div>
          </div>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/quick-response"
          >
            Quick responses
          </a>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/order-management"
          >
            Order management
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for admin with legacy automation features 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-3"
        >
          <div
            class="section d-flex align-items-center flex-grow"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper d-flex align-items-center flex-grow"
              title="My shop"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="Shopify logo"
                  role="presentation"
                  src="test-file-stub"
                />
              </div>
              <span
                class="name"
              >
                My shop
              </span>
            </div>
          </div>
          <span
            class="item isNested"
          >
            Quick responses
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/order-management"
          >
            Order management
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for admin without automation add-on and without legacy automation features 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-4"
        >
          <span
            class="item"
          >
            Quick responses
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <span
            class="item"
          >
            Order management
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <span
            class="item"
          >
            Article recommendation
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for agent with automation add-on 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-3"
        >
          <div
            class="section d-flex align-items-center flex-grow"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper d-flex align-items-center flex-grow"
              title="My shop"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="Shopify logo"
                  role="presentation"
                  src="test-file-stub"
                />
              </div>
              <span
                class="name"
              >
                My shop
              </span>
            </div>
          </div>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/quick-response"
          >
            Quick responses
          </a>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/order-management"
          >
            Order management
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for agent with legacy automation features 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-3"
        >
          <div
            class="section d-flex align-items-center flex-grow"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper d-flex align-items-center flex-grow"
              title="My shop"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="Shopify logo"
                  role="presentation"
                  src="test-file-stub"
                />
              </div>
              <span
                class="name"
              >
                My shop
              </span>
            </div>
          </div>
          <span
            class="item isNested"
          >
            Quick responses
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <a
            activeclassname="active"
            class="link isNested"
            to="/app/automation/self-service/shopify/My shop/preferences/order-management"
          >
            Order management
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for agent without automation add-on and without legacy automation features 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
      <div
        class="category"
      >
        <h4
          class="category-title"
        >
          <div
            class="title"
          >
            <i
              class="material-icons icon"
            >
              auto_awesome
            </i>
            automation add-on
          </div>
        </h4>
        <div
          class="mt-4"
        >
          <span
            class="item"
          >
            Quick responses
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <span
            class="item"
          >
            Order management
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
          <span
            class="item"
          >
            Article recommendation
            <i
              class="material-icons md-2 icon"
            >
              lock
            </i>
          </span>
        </div>
      </div>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for non-agent user with automation add-on 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<AutomationNavbar /> render() should render automation navbar for non-agent user without automation add-on 1`] = `
<div>
  <div
    class="nav-primary hidden-panel"
  >
    <div
      class="nav-dropdown dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-transparent"
        type="button"
      >
        <div>
          Automation
          <i
            class="material-icons icon-more"
          >
            more_vert
          </i>
        </div>
      </button>
      <div
        class="hiddenLink"
        data-candu-id="navbar-dropdown"
        data-testid="candu-hidden-link"
      />
      <div
        data-candu-id="navbar-home-spacer"
      />
      <div
        aria-hidden="true"
        class="dropdown-menu dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/tickets"
        >
          <i
            class="material-icons mr-2 icon"
          >
            question_answer
          </i>
          Tickets
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/automation"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bolt
          </i>
          <div
            class="d-flex flex-fill justify-content-between"
          >
            Automation
            <div
              class="badge"
            >
              NEW
            </div>
          </div>
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/customers"
        >
          <i
            class="material-icons mr-2 icon"
          >
            people
          </i>
          Customers
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/stats"
        >
          <i
            class="material-icons mr-2 icon"
          >
            bar_chart
          </i>
          Statistics
        </a>
        <a
          class="dropdown-item dropdown-item menu-item"
          role="menuitem"
          tabindex="0"
          to="/app/settings"
        >
          <i
            class="material-icons mr-2 icon"
          >
            settings
          </i>
          Settings
        </a>
      </div>
    </div>
    <div
      class="navbar-content"
    >
      <div
        class="category"
      >
        <a
          activeclassname="active"
          class="link"
          to="/app/automation"
        >
          Overview
        </a>
      </div>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/macros"
      >
        Macros
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/rules"
      >
        Rules
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/automation/ticket-assignment"
      >
        Ticket assignment
      </a>
    </div>
    <div
      data-candu-id="navbar-menu-spacer"
    />
    <button
      class="dropdown-toggle dropdown-toggle-dropup"
    >
      <div>
        Alex Plugaru
      </div>
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            AP
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="https://config.gorgias.io/production/picture"
        />
        <div
          class="badge"
          style="background-color: rgb(36, 214, 157);"
        />
      </div>
    </button>
  </div>
</div>
`;
